--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>main-page</title>
 </head>
 <body>
     <!-- шапка header -->
 <header>
     <nav>
+        <a href="">Web<span>Studio</span></a>
         <ul>
-            <li> <a href="">Web<span>Studio</span></a></li>
             <li> <a href="">Студия</a></li>
             <li><a href="">Портфолио</a></li>
             <li><a href="">Контакты</a></li>
         </ul>
     </nav>
-    <address>
         <a href="">info@devstudio.com</a>
         <p>+38 096 111 11 11</p>
-    </address>
 </header>
-    
+    <!--- Создание Блока Героя-->
+    <section>
+
+            <h1>Эффективные решения для вашего бизнеса</h1>
+       
+    </section>
 </body>
+
 </html>
