--- a/index.html
+++ b/index.html
@@ -17,15 +17,19 @@
             <li><a href="">Контакты</a></li>
         </ul>
     </nav>
-        <a href="">info@devstudio.com</a>
-        <p>+38 096 111 11 11</p>
+    <ul> 
+        <li><a href="">info@devstudio.com</a></li>
+        <li><a href="">+38 096 111 11 11</a></li>
+    </ul>
 </header>
     <!--- Создание Блока Героя-->
+<main>
     <section>
-
-            <h1>Эффективные решения для вашего бизнеса</h1>
-       
+        <img src="../-goit-markup-hw-01/img/Hero/hero-1.jpg" lang="en" alt="black rectangular" width="1600" height="600"> 
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button" name="Заказать услугу"></button>
     </section>
+</main>
 </body>
 
 </html>
