--- a/index.html
+++ b/index.html
@@ -1,35 +1,103 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>main-page</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- шапка header -->
-<header>
-    <nav>
+    <header>
+      <nav>
         <a href="">Web<span>Studio</span></a>
         <ul>
-            <li> <a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
         </ul>
-    </nav>
-    <ul> 
+      </nav>
+      <ul>
         <li><a href="">info@devstudio.com</a></li>
         <li><a href="">+38 096 111 11 11</a></li>
-    </ul>
-</header>
+      </ul>
+    </header>
     <!--- Создание Блока Героя-->
-<main>
-    <section>
-        <img src="../-goit-markup-hw-01/img/Hero/hero-1.jpg" lang="en" alt="black rectangular" width="1600" height="600"> 
+    <main>
+      <section>
+        <img
+          src="../-goit-markup-hw-01/img/Hero/hero-1.jpg"
+          lang="en"
+          alt="black rectangular"
+          width="1600"
+          height="600"
+        />
         <h1>Эффективные решения для вашего бизнеса</h1>
         <button type="button" name="Заказать услугу"></button>
-    </section>
-</main>
-</body>
+      </section>
 
+      <section>
+        <ul>
+          <li>
+            <h2>Внимание к деталям</h2>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h2>Пунктуальность</h2>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h2>Планирование</h2>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h2>Современные технологии</h2>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3>Чем мы занимаемся</h3>
+        <div>
+          <img
+            src="../-goit-markup-hw-01/img/our tasks/writting code.jpg"
+            lang="en"
+            alt="writting code"
+            width="370"
+            height="294"
+          />
+        </div>
+        <div>
+          <img
+            src="../-goit-markup-hw-01/img/our tasks/creating mobile application.jpg"
+            lang="en"
+            alt="creating mobile application"
+            width="370"
+            height="294"
+          />
+        </div>
+        <div>
+          <img
+            src="../-goit-markup-hw-01/img/our tasks/colors on tablet.jpg"
+            lang="en"
+            alt="colors on tablet creating design"
+            width="370"
+            height="294"
+          />
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
