--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h3>Чем мы занимаемся</h3>
         <div>
           <img
-            src="../-goit-markup-hw-01/img/our tasks/writting code.jpg"
+            src="../-goit-markup-hw-01/img/our-tasks/writting code.jpg"
             lang="en"
             alt="writting code"
             width="370"
@@ -81,7 +81,7 @@
         </div>
         <div>
           <img
-            src="../-goit-markup-hw-01/img/our tasks/creating mobile application.jpg"
+            src="../-goit-markup-hw-01/img/our-tasks/creating mobile application.jpg"
             lang="en"
             alt="creating mobile application"
             width="370"
@@ -90,12 +90,59 @@
         </div>
         <div>
           <img
-            src="../-goit-markup-hw-01/img/our tasks/colors on tablet.jpg"
+            src="../-goit-markup-hw-01/img/our-tasks/colors on tablet.jpg"
             lang="en"
             alt="colors on tablet creating design"
             width="370"
             height="294"
           />
+        </div>
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+        <div>
+          <h3>Игорь Демьяненко</h3>
+          <img
+            src="../-goit-markup-hw-01/img/our-team/product-designer.jpg"
+            lang="en"
+            alt="photo of product-designer"
+            width="270"
+            height="260"
+          />
+          <p>Product Designer</p>
+        </div>
+        <div>
+          <h3>Ольга Репина</h3>
+          <img
+            src="../-goit-markup-hw-01/img/our-team/frontend.jpg"
+            lang="en"
+            alt="photo of frontend developer"
+            width="270"
+            height="260"
+          />
+          <p>Frontend Developer</p>
+        </div>
+        <div>
+          <h3>Николай Тарасов</h3>
+          <img
+            src="../-goit-markup-hw-01/img/our-team/marketing.jpg"
+            lang="en"
+            alt="photo of marketing employee"
+            width="270"
+            height="260"
+          />
+          <p>Marketing</p>
+        </div>
+        <div>
+          <h3>Михаил Ермаков</h3>
+          <img
+            src="../-goit-markup-hw-01/img/our-team/ui-designer.jpg"
+            lang="en"
+            alt="photo of ui-designer"
+            width="270"
+            height="260"
+          />
+          <p>UI Designer</p>
         </div>
       </section>
     </main>
