--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- шапка header -->
     <header>
       <nav>
-        <a href="">Web<span>Studio</span></a>
+        <a href="/" lang="en">Web<span>Studio</span></a>
         <ul>
           <li><a href="">Студия</a></li>
           <li><a href="">Портфолио</a></li>
@@ -27,8 +27,7 @@
       <section>
         <img
           src="../-goit-markup-hw-01/img/Hero/hero-1.jpg"
-          lang="en"
-          alt="black rectangular"
+          alt="черный прямоугольник"
           width="1600"
           height="600"
         />
@@ -73,8 +72,7 @@
         <div>
           <img
             src="../-goit-markup-hw-01/img/our-tasks/writting code.jpg"
-            lang="en"
-            alt="writting code"
+            alt="руки на клавиатуре пишут код"
             width="370"
             height="294"
           />
@@ -82,8 +80,7 @@
         <div>
           <img
             src="../-goit-markup-hw-01/img/our-tasks/creating mobile application.jpg"
-            lang="en"
-            alt="creating mobile application"
+            alt="женщина держит телефон в руке перед ней ноутбук на экране которого телефоны"
             width="370"
             height="294"
           />
@@ -91,8 +88,7 @@
         <div>
           <img
             src="../-goit-markup-hw-01/img/our-tasks/colors on tablet.jpg"
-            lang="en"
-            alt="colors on tablet creating design"
+            alt="на планшете выбират цвет"
             width="370"
             height="294"
           />
@@ -104,8 +100,7 @@
           <h3>Игорь Демьяненко</h3>
           <img
             src="../-goit-markup-hw-01/img/our-team/product-designer.jpg"
-            lang="en"
-            alt="photo of product-designer"
+            alt="фото мужчины продакт дизайнера"
             width="270"
             height="260"
           />
@@ -115,8 +110,7 @@
           <h3>Ольга Репина</h3>
           <img
             src="../-goit-markup-hw-01/img/our-team/frontend.jpg"
-            lang="en"
-            alt="photo of frontend developer"
+            alt="фото женщины фронтэнд разработчика"
             width="270"
             height="260"
           />
@@ -126,8 +120,7 @@
           <h3>Николай Тарасов</h3>
           <img
             src="../-goit-markup-hw-01/img/our-team/marketing.jpg"
-            lang="en"
-            alt="photo of marketing employee"
+            alt="фото мужчины занимающегося маркетингом"
             width="270"
             height="260"
           />
@@ -137,8 +130,7 @@
           <h3>Михаил Ермаков</h3>
           <img
             src="../-goit-markup-hw-01/img/our-team/ui-designer.jpg"
-            lang="en"
-            alt="photo of ui-designer"
+            alt="фото мужчины юай дизайнера"
             width="270"
             height="260"
           />
@@ -146,5 +138,18 @@
         </div>
       </section>
     </main>
+    <!--Оформление футера -->
+    <footer>
+      <section>
+        <a href="/" lang="en">Web<span>Studio</span></a>
+      </section>
+      <address>
+        <ul>
+          <li><a href="/">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li><a href="/">info@example.com</a></li>
+          <li><a href="/">+38 099 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
