--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main>
       <section>
         <img
-          src="../-goit-markup-hw-01/img/Hero/hero-1.jpg"
+          src="/img/Hero/hero-1.jpg"
           alt="черный прямоугольник"
           width="1600"
           height="600"
@@ -69,78 +69,84 @@
       </section>
       <section>
         <h3>Чем мы занимаемся</h3>
-        <div>
-          <img
-            src="../-goit-markup-hw-01/img/our-tasks/writting code.jpg"
-            alt="руки на клавиатуре пишут код"
-            width="370"
-            height="294"
-          />
-        </div>
-        <div>
-          <img
-            src="../-goit-markup-hw-01/img/our-tasks/creating mobile application.jpg"
-            alt="женщина держит телефон в руке перед ней ноутбук на экране которого телефоны"
-            width="370"
-            height="294"
-          />
-        </div>
-        <div>
-          <img
-            src="../-goit-markup-hw-01/img/our-tasks/colors on tablet.jpg"
-            alt="на планшете выбират цвет"
-            width="370"
-            height="294"
-          />
-        </div>
+        <ul>
+          <li>
+            <img
+              src="/img/our-tasks/code.jpg"
+              alt="руки на клавиатуре пишут код"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="/img/our-tasks/creating-mob-app.jpg"
+              alt="женщина держит телефон в руке перед ней ноутбук на экране которого телефоны"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="/img/our-tasks/colors-on-tablet.jpg"
+              alt="на планшете выбират цвет"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
       </section>
       <section>
+        <!-- блок команда-->
         <h2>Наша команда</h2>
-        <div>
-          <h3>Игорь Демьяненко</h3>
-          <img
-            src="../-goit-markup-hw-01/img/our-team/product-designer.jpg"
-            alt="фото мужчины продакт дизайнера"
-            width="270"
-            height="260"
-          />
-          <p>Product Designer</p>
-        </div>
-        <div>
-          <h3>Ольга Репина</h3>
-          <img
-            src="../-goit-markup-hw-01/img/our-team/frontend.jpg"
-            alt="фото женщины фронтэнд разработчика"
-            width="270"
-            height="260"
-          />
-          <p>Frontend Developer</p>
-        </div>
-        <div>
-          <h3>Николай Тарасов</h3>
-          <img
-            src="../-goit-markup-hw-01/img/our-team/marketing.jpg"
-            alt="фото мужчины занимающегося маркетингом"
-            width="270"
-            height="260"
-          />
-          <p>Marketing</p>
-        </div>
-        <div>
-          <h3>Михаил Ермаков</h3>
-          <img
-            src="../-goit-markup-hw-01/img/our-team/ui-designer.jpg"
-            alt="фото мужчины юай дизайнера"
-            width="270"
-            height="260"
-          />
-          <p>UI Designer</p>
-        </div>
+        <ul>
+          <li>
+            <h3>Игорь Демьяненко</h3>
+            <img
+              src="/img/our-team/product-designer.jpg"
+              alt="фото мужчины продакт дизайнера"
+              width="270"
+              height="260"
+            />
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <h3>Ольга Репина</h3>
+            <img
+              src="/img/our-team/frontend.jpg"
+              alt="фото женщины фронтэнд разработчика"
+              width="270"
+              height="260"
+            />
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <h3>Николай Тарасов</h3>
+            <img
+              src="/img/our-team/marketing.jpg"
+              alt="фото мужчины занимающегося маркетингом"
+              width="270"
+              height="260"
+            />
+            <p>Marketing</p>
+          </li>
+          <li>
+            <h3>Михаил Ермаков</h3>
+            <img
+              src="/img/our-team/ui-designer.jpg"
+              alt="фото мужчины юай дизайнера"
+              width="270"
+              height="260"
+            />
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
     <!--Оформление футера -->
     <footer>
       <section>
+        <h4>спрятанный заголовок для секции контактная информация</h4>
         <a href="/" lang="en">Web<span>Studio</span></a>
       </section>
       <address>
