update after check

--- a/index.html
+++ b/index.html
@@ -25,41 +25,36 @@
     <!--- Создание Блока Героя-->
     <main>
       <section>
-        <img
-          src="/img/Hero/hero-1.jpg"
-          alt="черный прямоугольник"
-          width="1600"
-          height="600"
-        />
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button" name="Заказать услугу"></button>
+        <button type="button">Заказать услугу</button>
       </section>
 
       <section>
+        <h2>особенности работы</h2>
         <ul>
           <li>
-            <h2>Внимание к деталям</h2>
+            <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h2>Пунктуальность</h2>
+            <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h2>Планирование</h2>
+            <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h2>Современные технологии</h2>
+            <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -68,7 +63,7 @@
         </ul>
       </section>
       <section>
-        <h3>Чем мы занимаемся</h3>
+        <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
             <img
@@ -101,54 +96,51 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <h3>Игорь Демьяненко</h3>
             <img
               src="/img/our-team/product-designer.jpg"
               alt="фото мужчины продакт дизайнера"
               width="270"
               height="260"
             />
-            <p>Product Designer</p>
+            <h3>Игорь Демьяненко</h3>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
-            <h3>Ольга Репина</h3>
             <img
               src="/img/our-team/frontend.jpg"
               alt="фото женщины фронтэнд разработчика"
               width="270"
               height="260"
             />
-            <p>Frontend Developer</p>
+            <h3>Ольга Репина</h3>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
-            <h3>Николай Тарасов</h3>
             <img
               src="/img/our-team/marketing.jpg"
               alt="фото мужчины занимающегося маркетингом"
               width="270"
               height="260"
             />
-            <p>Marketing</p>
+            <h3>Николай Тарасов</h3>
+            <p lang="en">Marketing</p>
           </li>
           <li>
-            <h3>Михаил Ермаков</h3>
             <img
               src="/img/our-team/ui-designer.jpg"
               alt="фото мужчины юай дизайнера"
               width="270"
               height="260"
             />
-            <p>UI Designer</p>
+            <h3>Михаил Ермаков</h3>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Оформление футера -->
     <footer>
-      <section>
-        <h4>спрятанный заголовок для секции контактная информация</h4>
-        <a href="/" lang="en">Web<span>Studio</span></a>
-      </section>
+      <a href="/" lang="en">Web<span>Studio</span></a>
       <address>
         <ul>
           <li><a href="/">г. Киев, пр-т Леси Украинки, 26</a></li>
