--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <ul>
           <li>
             <img
-              src="/img/our-tasks/code.jpg"
+              src="img/our-tasks/code.jpg"
               alt="руки на клавиатуре пишут код"
               width="370"
               height="294"
@@ -75,7 +75,7 @@
           </li>
           <li>
             <img
-              src="/img/our-tasks/creating-mob-app.jpg"
+              src="img/our-tasks/creating-mob-app.jpg"
               alt="женщина держит телефон в руке перед ней ноутбук на экране которого телефоны"
               width="370"
               height="294"
@@ -83,7 +83,7 @@
           </li>
           <li>
             <img
-              src="/img/our-tasks/colors-on-tablet.jpg"
+              src="img/our-tasks/colors-on-tablet.jpg"
               alt="на планшете выбират цвет"
               width="370"
               height="294"
