--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <ul>
           <li>
             <img
-              src="/img/our-team/product-designer.jpg"
+              src="img/our-team/product-designer.jpg"
               alt="фото мужчины продакт дизайнера"
               width="270"
               height="260"
@@ -107,7 +107,7 @@
           </li>
           <li>
             <img
-              src="/img/our-team/frontend.jpg"
+              src="img/our-team/frontend.jpg"
               alt="фото женщины фронтэнд разработчика"
               width="270"
               height="260"
@@ -117,7 +117,7 @@
           </li>
           <li>
             <img
-              src="/img/our-team/marketing.jpg"
+              src="img/our-team/marketing.jpg"
               alt="фото мужчины занимающегося маркетингом"
               width="270"
               height="260"
@@ -127,7 +127,7 @@
           </li>
           <li>
             <img
-              src="/img/our-team/ui-designer.jpg"
+              src="img/our-team/ui-designer.jpg"
               alt="фото мужчины юай дизайнера"
               width="270"
               height="260"
